2001-11-26  Werner Koch  <wk@gnupg.org>

	* assuan.h: Added more status codes.

2001-11-25  Werner Koch  <wk@gnupg.org>

	* assuan-handler.c (assuan_register_bye_notify)
	(assuan_register_reset_notify)
	(assuan_register_cancel_notify): New and call them from the
	standard handlers.
	(assuan_process): Moved bulk of function to ..
	(process_request): .. new.
	(assuan_process_next): One shot version of above.
	(assuan_get_active_fds): New.

2001-11-24  Werner Koch  <wk@gnupg.org>

	* assuan-connect.c (assuan_get_pid): New.

	* assuan-buffer.c (_assuan_read_line): Deal with reads of more
	than a line.
	* assuan-defs.h: Add space in the context for this.

	
     ***********************************************************
     * Please note that Assuan is maintained as part of GnuPG. *
     * You may find it source-copied in other packages.        *
     ***********************************************************	
	
 Copyright 2001 Free Software Foundation, Inc.

 This file is free software; as a special exception the author gives
 unlimited permission to copy and/or distribute it, with or without
 modifications, as long as this notice is preserved.

 This file is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.